Fix overflow issue causing scrolling bug (#1185)

--- a/src/layout/global.scss
+++ b/src/layout/global.scss
@@ -4,7 +4,6 @@ html,
 body,
 #root {
   height: 100%;
-  overflow-y: hidden;
 }
 
 .storage-modal-modifier {
@@ -24,5 +23,5 @@ body,
 }
 
 .pf-c-page {
-  height: 103%;
+  padding-bottom: 20px;
 }
